--- a/Server/package.json
+++ b/Server/package.json
@@ -6,10 +6,11 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "express": "~4.16.1",
-    "nodemon": "^1.19.4",
+    "body-parser": "^1.19.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2"
+    "eslint-plugin-import": "^2.17.2",
+    "express": "~4.16.1",
+    "nodemon": "^1.19.4"
   }
 }
