--- a/Server/package.json
+++ b/Server/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "express-formidable": "^1.2.0",
     "body-parser": "^1.19.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
