--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-import": "^2.17.2",
     "express": "~4.16.1",
     "express-formidable": "^1.2.0",
+    "mongodb": "^3.3.3",
     "nodemon": "^1.19.4"
   }
 }
