--- a/Server/package.json
+++ b/Server/package.json
@@ -13,7 +13,10 @@
     "eslint-plugin-import": "^2.17.2",
     "express": "~4.16.1",
     "express-formidable": "^1.2.0",
+    "lame": "^1.2.4",
     "mongodb": "^3.3.3",
-    "nodemon": "^1.19.4"
+    "node-lame": "^1.2.0",
+    "nodemon": "^1.19.4",
+    "wavefile": "^8.4.6"
   }
 }
