--- a/SoundLevelChecker/.classpath
+++ b/SoundLevelChecker/.classpath
@@ -2,5 +2,11 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/kecse/Downloads/http/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kecse/Downloads/http/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kecse/Downloads/http/httpclient-4.5.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kecse/Downloads/http/httpcore-4.4.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kecse/Downloads/httpclient-4.5.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kecse/Downloads/httpmime-4.3.jar/httpmime-4.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
